# fs-msgraphy

./: .gitignore  pyproject.toml
msgraphyfs/: __init__.py  file.py  fs.py  opener.py
tests/: test_fs.py
